--- a/src/pages/Auth.css
+++ b/src/pages/Auth.css
@@ -1,5 +1,5 @@
 .background{
-    background-color: #313131;
+    background: linear-gradient(to bottom, #0c0a09, #082f49, #164e63);
     height: 100vh;
     width: 100vw;
 }
@@ -18,6 +18,7 @@ main{
     flex-direction: column;
     align-items: center;
     text-align: center;
+    
 }
 .gradient{
     background: linear-gradient(45deg, #4000ff, #9d00ff, #006eff);
